# MBJ-DA

./: .gitignore  README.md  pyproject.toml
MBJ-DA/: dataset.py  logger.py  metrics.py  model.py  parser.py  test.py  train.py  utils.py
datasets/toy/: jobs.txt  test.txt  train.txt  val.txt
