[tool.poetry]
name = "MBJ-DA"
version = "1.0.0"
description = ""
authors = ["Yosuke Saito"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "1.10.0"
numpy = "^1.23.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
